--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
-  "name": "iobroker.hue-lights",
-  "version": "0.1.0",
-  "description": "Integration of your Philips Hue Lights with your ioBroker",
-  "main": "hue-lights.js",
-  "directories": {
-    "lib": "lib",
-    "test": "test"
+  "_from": "https://github.com/Zefau/ioBroker.hue-lights/tarball/master",
+  "_id": "iobroker.hue-lights@0.1.0",
+  "_inBundle": false,
+  "_integrity": "sha512-U/1TcH0gOXUlrrzL3yfueyiwRTVQNtP2BMDV/z/ANaVGNH7GKA0UERNlVF6FvbzARck81aT0fD4j8uV51PGfVA==",
+  "_location": "/iobroker.hue-lights",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "remote",
+    "raw": "https://github.com/Zefau/ioBroker.hue-lights/tarball/master",
+    "rawSpec": "https://github.com/Zefau/ioBroker.hue-lights/tarball/master",
+    "saveSpec": "https://github.com/Zefau/ioBroker.hue-lights/tarball/master",
+    "fetchSpec": "https://github.com/Zefau/ioBroker.hue-lights/tarball/master"
   },
+  "_requiredBy": [
+    "#USER",
+    "/"
+  ],
+  "_resolved": "https://github.com/Zefau/ioBroker.hue-lights/tarball/master",
+  "_shasum": "0a42f2123a965153e056cf0ab06a4645ccecbfef",
+  "_spec": "https://github.com/Zefau/ioBroker.hue-lights/tarball/master",
+  "_where": "/opt/iobroker",
   "author": {
     "name": "zefau",
     "email": "zefau@mailbox.org"
@@ -14,6 +27,7 @@
   "bugs": {
     "url": "https://github.com/Zefau/ioBroker.hue-lights/issues"
   },
+  "bundleDependencies": false,
   "contributors": [
     {
       "name": "zefau",
@@ -26,12 +40,17 @@
     "request-promise": "^4.2.4"
   },
   "deprecated": false,
+  "description": "Integration of your Philips Hue Lights with your ioBroker",
   "devDependencies": {
     "@iobroker/testing": "^1.2.5",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
     "gulp": "^4.0.2",
     "mocha": "^6.1.4"
+  },
+  "directories": {
+    "lib": "lib",
+    "test": "test"
   },
   "homepage": "https://github.com/Zefau/ioBroker.hue-lights",
   "keywords": [
@@ -40,6 +59,8 @@
     "lights"
   ],
   "license": "MIT",
+  "main": "hue-lights.js",
+  "name": "iobroker.hue-lights",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Zefau/ioBroker.hue-lights.git"
@@ -49,5 +70,6 @@
     "test:integration": "mocha test/integration --exit",
     "test:package": "mocha test/package --exit",
     "test:unit": "mocha test/unit --exit"
-  }
+  },
+  "version": "0.2.0"
 }
