--- a/package.json
+++ b/package.json
@@ -71,5 +71,5 @@
     "test:package": "mocha test/package --exit",
     "test:unit": "mocha test/unit --exit"
   },
-  "version": "0.9.0"
+  "version": "1.0.0-rc.1"
 }
