--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "test": "npm run test:package && npm run test:unit",
     "test:integration": "mocha test/integration --exit",
     "test:package": "mocha test/package --exit",
-    "test:unit": "mocha test/unit --exit"
+    "test:unit": "mocha test/unit --exit",
+    "translate": "gulp translateAndUpdateWordsJS"
   },
-  "version": "1.1.1"
+  "version": "1.1.2"
 }
