--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -42,4 +42,4 @@ jobs:
       - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.github}}
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
