--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -37,8 +37,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-          registry-url: https://npm.pkg.github.com/
-          scope: '@zefau'
+          registry-url: https://npm.pkg.github.com
+          scope: '@Zefau'
       - run: npm ci
       - run: npm publish
         env:
