--- a/.github/workflows/commitOrPullRequest.yml
+++ b/.github/workflows/commitOrPullRequest.yml
@@ -8,4 +8,4 @@ jobs:
     steps:
     - name: commitOrPullRequest
       id: commitOrPullRequest
-      uses: actions/githubActions-iobroker-commitOrPullRequest@v1
+      uses: Zefau/githubActions-iobroker-commitOrPullRequest
