--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-  "_from": "https://github.com/Zefau/ioBroker.hue-extended/tarball/4667185e9a4db67b24b2165e868301576d881613",
-  "_id": "iobroker.hue-extended@1.3.6",
+  "_from": "iobroker.hue-extended@1.3.7",
+  "_id": "iobroker.hue-extended@1.3.7",
   "_inBundle": false,
-  "_integrity": "sha512-Oew4JpcBqB+T/RU+Dhn9fcCgwkvVtPTmtfkCA046A5BdlJ0fv3tvot/rdF+HxHIwtVaEwxFby/q+gFadNhnb9A==",
+  "_integrity": "sha512-6jDitHrsQpUkUM1FXBJjzazL3fM+fldJSr4QR9QKmytYrYcdZIXPdsLeN3osXiNThoUqZ5mHu1oaYnhQCRkOuA==",
   "_location": "/iobroker.hue-extended",
   "_phantomChildren": {},
   "_requested": {
-    "type": "remote",
-    "raw": "https://github.com/Zefau/ioBroker.hue-extended/tarball/4667185e9a4db67b24b2165e868301576d881613",
-    "rawSpec": "https://github.com/Zefau/ioBroker.hue-extended/tarball/4667185e9a4db67b24b2165e868301576d881613",
-    "saveSpec": "https://github.com/Zefau/ioBroker.hue-extended/tarball/4667185e9a4db67b24b2165e868301576d881613",
-    "fetchSpec": "https://github.com/Zefau/ioBroker.hue-extended/tarball/4667185e9a4db67b24b2165e868301576d881613"
+    "type": "version",
+    "registry": true,
+    "raw": "iobroker.hue-extended@1.3.7",
+    "name": "iobroker.hue-extended",
+    "escapedName": "iobroker.hue-extended",
+    "rawSpec": "1.3.7",
+    "saveSpec": null,
+    "fetchSpec": "1.3.7"
   },
   "_requiredBy": [
     "#USER",
     "/"
   ],
-  "_resolved": "https://github.com/Zefau/ioBroker.hue-extended/tarball/4667185e9a4db67b24b2165e868301576d881613",
-  "_shasum": "c2c8aebfc251946f2de05232cc0382f14edc41e0",
-  "_spec": "https://github.com/Zefau/ioBroker.hue-extended/tarball/4667185e9a4db67b24b2165e868301576d881613",
+  "_resolved": "https://registry.npmjs.org/iobroker.hue-extended/-/iobroker.hue-extended-1.3.7.tgz",
+  "_shasum": "5a095093f3c1f6ccce5b58c5d416011e1e755b74",
+  "_spec": "iobroker.hue-extended@1.3.7",
   "_where": "/opt/iobroker",
   "author": {
     "name": "zefau",
@@ -73,5 +76,5 @@
     "test:unit": "mocha test/unit --exit",
     "translate": "gulp translateAndUpdateWordsJS"
   },
-  "version": "1.3.7"
+  "version": "1.3.8"
 }
