--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "@iobroker/adapter-core": "^2.4.0",
     "color-convert": "^2.0.1",
     "request": "^2.88.2",
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.5",
+    "ws": "^7.3.0"
   },
   "deprecated": false,
   "description": "Integration of your Philips Hue Lights with your ioBroker",
@@ -49,6 +50,7 @@
     "@iobroker/testing": "^2.2.0",
     "axios": "^0.19.2",
     "chai": "^4.2.0",
+    "eslint": "^7.4.0",
     "gulp": "^4.0.2",
     "mocha": "^8.0.1"
   },
@@ -76,5 +78,5 @@
     "test:unit": "mocha test/unit --exit",
     "translate": "gulp translateAndUpdateWordsJS"
   },
-  "version": "1.3.8"
+  "version": "2.0.0-beta.1"
 }
